@@ -27,8 +27,10 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
+import org.apache.commons.lang3.StringUtils;
 import org.apache.http.NameValuePair;
 import org.apache.http.client.utils.URIBuilder;
 import org.hamcrest.Description;
@@ -39,6 +41,7 @@ import org.openqa.selenium.Keys;
 import org.openqa.selenium.StaleElementReferenceException;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.interactions.Actions;
+import org.openqa.selenium.support.ui.ExpectedConditions;
 import org.openqa.selenium.support.ui.Select;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -50,7 +53,6 @@ import org.xwiki.test.ui.po.BaseElement;
 import org.xwiki.test.ui.po.DateRangePicker;
 import org.xwiki.test.ui.po.FormContainerElement;
 import org.xwiki.test.ui.po.SuggestInputElement;
-import org.xwiki.text.StringUtils;
 
 import static java.util.Collections.singletonList;
 import static org.hamcrest.CoreMatchers.hasItem;
@@ -72,9 +74,19 @@ public class TableLayoutElement extends BaseElement
 
     private static final String INNER_HTML_ATTRIBUTE = "innerHTML";
 
-    private static final String CLASS_HTML_ATTRIBUTE = "class";
-
     private final LiveDataElement liveData;
+
+    private static final Pattern PAGINATION_SENTENCE_PATTERN =
+        Pattern.compile("^Entries (?<firstEntry>\\d+) - (?<lastEntry>\\d+) out of (?<totalEntries>\\d+)$");
+
+    /**
+     * @return the list of rows {@link WebElement}s
+     * @since 16.1.0RC1
+     */
+    public List<WebElement> getRows()
+    {
+        return getDriver().findElementsWithoutWaiting(getRoot(), By.cssSelector("tbody > tr"));
+    }
 
     /**
      * A matcher for the cell containing links. The matcher assert of a given {@link WebElement} contains a {@code a}
@@ -121,7 +133,7 @@ public class TableLayoutElement extends BaseElement
             URIBuilder uriBuilder = new URIBuilder(initialUri);
             List<String> pathSegments = uriBuilder.getPathSegments();
             URI uri;
-            if (pathSegments.get(pathSegments.size() - 1).equals("")) {
+            if ("".equals(pathSegments.getLast())) {
                 pathSegments.remove(pathSegments.size() - 1);
                 try {
                     uri = uriBuilder.setPathSegments(pathSegments).build();
@@ -163,7 +175,7 @@ public class TableLayoutElement extends BaseElement
         @Override
         protected boolean matchesSafely(WebElement item)
         {
-            return item.getText().equals(this.value);
+            return this.value.equals(item.getText());
         }
 
         @Override
@@ -446,11 +458,11 @@ public class TableLayoutElement extends BaseElement
             }
 
             // Cells are displayed. And they are loaded.
-            if (isEmpty() || !areCellsLoaded()) {
+            if ((expectedRowCount > 0 && isEmpty()) || !areCellsLoaded()) {
                 return false;
             }
 
-            // And the count of row is greater than the expected count.
+            // And the count of row is equal to the expected count.
             int count = countRows();
             LOGGER.info("TableLayoutElement#waitUntilRowCountEqualsTo/refresh(): count = [{}]", count);
             return count == expectedRowCount;
@@ -504,41 +516,82 @@ public class TableLayoutElement extends BaseElement
         WebElement element = getFilter(columnLabel);
 
         List<String> classes = Arrays.asList(getClasses(element));
-        if (classes.contains("filter-list")) {
-            if (element.getAttribute(CLASS_HTML_ATTRIBUTE).contains("selectized")) {
-                SuggestInputElement suggestInputElement = new SuggestInputElement(element);
-                // Wait for the suggestions on selectize fields only if this is explicitly asked.
-                suggestInputElement.clearSelectedSuggestions().sendKeys(content);
-                if (Objects.equals(options.get(FILTER_COLUMN_SELECTIZE_WAIT_FOR_SUGGESTIONS), Boolean.TRUE)) {
-                    suggestInputElement.waitForSuggestions().selectByVisibleText(content);
-                } else {
-                    suggestInputElement.selectTypedText();
-                }
-            } else {
-                new Select(element).selectByVisibleText(content);
-            }
-        } else if (classes.contains("filter-text")) {
-            element.clear();
-            if (content.isEmpty()) {
-                // Make sure we generate some actual key events so LD notices the empty filter.
-                element.sendKeys(" ", Keys.BACK_SPACE);
-            } else {
-                element.sendKeys(content);
-            }
-        } else if (classes.contains("filter-date")) {
-            element.click();
-            DateRangePicker picker = new DateRangePicker(element);
-            if (StringUtils.isNotBlank(content)) {
-                element.clear();
-                element.sendKeys(content);
-                picker.applyRange();
-            } else {
-                picker.clearRange();
-            }
+        String filterType = classes.stream().filter(it -> it.startsWith("filter-")).findFirst()
+            .orElseThrow(() -> new IllegalStateException("No filter type found for column: " + columnLabel));
+        switch (filterType) {
+            case "filter-list" -> filterListColumn(content, options, element);
+            case "filter-text" -> filterTextColumn(content, element);
+            case "filter-date" -> filterDateColumn(content, element);
+            case "filter-boolean" -> filterBooleanColumn(content, element);
+            default -> throw new IllegalStateException("Unsupported filter type: " + filterType);
         }
 
         if (wait) {
             waitUntilReady();
+        }
+    }
+
+    private void filterListColumn(String content, Map<String, Object> options, WebElement filterElement)
+    {
+        SuggestInputElement suggestInputElement = new SuggestInputElement(filterElement);
+        // Wait for the suggestions on selectize fields only if this is explicitly asked.
+        suggestInputElement.click().waitForSuggestions().clearSelectedSuggestions().sendKeys(content);
+        if (Objects.equals(options.get(FILTER_COLUMN_SELECTIZE_WAIT_FOR_SUGGESTIONS), Boolean.TRUE)) {
+            suggestInputElement.waitForSuggestions().selectByVisibleText(content);
+        } else {
+            suggestInputElement.selectTypedText();
+        }
+        // Sometimes, when the suggest input is focused, we need to click twice to perform an action (e.g. sort on a
+        // given column, open the "More actions" dropdown menu). The first click moves the focus to the new target (i.e.
+        // document.activeElement is updated) but the action is not performed until the second click. We couldn't
+        // reproduce this outside tests, and it doesn't reproduce for any suggest input filter in tests either, so we
+        // don't know if this is a Tom Select bug or some issue in Selenium / WebDriver, or a mix of both. The
+        // workaround is to blur the suggest input after selecting a value.
+        getDriver().executeScript("document.activeElement?.blur()");
+    }
+
+    private static void filterBooleanColumn(String content, WebElement filterElement)
+    {
+        SuggestInputElement suggestInputElement = new SuggestInputElement(filterElement);
+        if (StringUtils.isEmpty(content)) {
+            // Clear the boolean filter.
+            suggestInputElement.clearSelectedSuggestions().hideSuggestions();
+        } else {
+            suggestInputElement.clear().sendKeys(content);
+            // The boolean filter doesn't need a remote source, so we don't need to wait for suggestions to be fetched.
+            suggestInputElement.waitForNonTypedSuggestions(false);
+            suggestInputElement.selectByVisibleText(content);
+        }
+    }
+
+    private static void filterTextColumn(String content, WebElement filterElement)
+    {
+        filterElement.clear();
+        if (content.isEmpty()) {
+            // Make sure we generate some actual key events so LD notices the empty filter.
+            filterElement.sendKeys(" ", Keys.BACK_SPACE);
+        } else {
+            filterElement.sendKeys(content);
+        }
+        try {
+            // Wait for the duration of the debounce, to make sure the text filtering process is started before
+            // continuing.
+            Thread.sleep(250);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    private static void filterDateColumn(String content, WebElement element)
+    {
+        element.click();
+        DateRangePicker picker = new DateRangePicker(element);
+        if (StringUtils.isNotBlank(content)) {
+            element.clear();
+            element.sendKeys(content);
+            picker.applyRange();
+        } else {
+            picker.clearRange();
         }
     }
 
@@ -553,7 +606,7 @@ public class TableLayoutElement extends BaseElement
         int columnIndex = findColumnIndex(columnLabel);
 
         WebElement element = getRoot().findElement(By.cssSelector(String.format(".column-header-names > th:nth-child"
-            + "(%d) .sort-icon", columnIndex)));
+            + "(%d) .handle", columnIndex)));
         element.click();
 
         waitUntilReady();
@@ -577,18 +630,18 @@ public class TableLayoutElement extends BaseElement
         List<String> classes = Arrays.asList(getClasses(element));
         List<String> ret;
         if (classes.contains("filter-list")) {
-            if (element.getAttribute(CLASS_HTML_ATTRIBUTE).contains("selectized")) {
+            if (StringUtils.defaultString(element.getAttribute(ATTRIBUTE_CLASS)).contains("tomselected")) {
                 ret = new SuggestInputElement(element)
                     .getSelectedSuggestions()
                     .stream()
                     .map(SuggestInputElement.SuggestionElement::getLabel)
-                    .collect(Collectors.toList());
+                    .toList();
             } else {
                 ret = new Select(element)
                     .getAllSelectedOptions()
                     .stream()
                     .map(WebElement::getText)
-                    .collect(Collectors.toList());
+                    .toList();
             }
         } else if (classes.contains("filter-text")) {
             ret = singletonList(element.getText());
@@ -665,8 +718,10 @@ public class TableLayoutElement extends BaseElement
     public WebElement getFilter(String columnLabel)
     {
         int columnIndex = findColumnIndex(columnLabel);
-        return getRoot()
-            .findElement(By.cssSelector(String.format(".column-filters > th:nth-child(%d) input", columnIndex)));
+        By cssSelector = By.cssSelector(String.format(
+            ".column-filters > th:nth-child(%1$d) input, "
+            + ".column-filters > th:nth-child(%1$d) select", columnIndex));
+        return getRoot().findElement(cssSelector);
     }
 
     /**
@@ -679,6 +734,24 @@ public class TableLayoutElement extends BaseElement
             .map(it -> it.getAttribute("value")).collect(Collectors.toSet());
     }
 
+    private String getPaginationEntriesString()
+    {
+        return getRoot().findElement(By.className("pagination-current-entries")).getText().trim();
+    }
+
+    private java.util.regex.Matcher getPaginationMatcher()
+    {
+        return PAGINATION_SENTENCE_PATTERN.matcher(getPaginationEntriesString());
+    }
+
+    public long getTotalEntries()
+    {
+        java.util.regex.Matcher paginationMatcher = getPaginationMatcher();
+        if (!paginationMatcher.matches()) {
+            throw new IllegalStateException("Matcher does not match: " + getPaginationEntriesString());
+        }
+        return Long.parseLong(paginationMatcher.group("totalEntries"));
+    }
 
     /**
      * Clicks on an action button identified by its name, on a given row.
@@ -688,9 +761,29 @@ public class TableLayoutElement extends BaseElement
      */
     public void clickAction(int rowNumber, String actionName)
     {
-        getRoot().findElement(By.cssSelector(
-            String.format("tbody tr:nth-child(%d) [name='%s']", rowNumber, actionName)))
-            .click();
+        clickAction(rowNumber, getActionSelector(actionName));
+    }
+
+    /**
+     * @param rowNumber the row number to inspect
+     * @param actionName the expected action
+     * @return {@code true} if the expected action is found on the row, {@code false} otherwise
+     * @since 16.2.0RC1
+     */
+    public boolean hasAction(int rowNumber, String actionName)
+    {
+        return !findElementsInRow(rowNumber, getActionSelector(actionName)).isEmpty();
+    }
+
+    /**
+     * Clicks on an action based on a row and the provided selector.
+     *
+     * @param rowNumber the row number, for instance 3 for the third row
+     * @param selector the selector to find the action element in the row
+     */
+    public void clickAction(int rowNumber, By selector)
+    {
+        findElementInRow(rowNumber, selector).click();
     }
 
     /**
@@ -699,7 +792,8 @@ public class TableLayoutElement extends BaseElement
      *
      * @param columnLabel the label of the column
      * @param rowNumber the number of the row to update (the first line is number 1)
-     * @param fieldName the name of the field to edit, in other word the name of the corresponding XClass property
+     * @param fieldName the name of the field to edit, in other words, the name of the corresponding document or XClass
+     * property
      * @param newValue the new value of the field
      */
     public void editCell(String columnLabel, int rowNumber, String fieldName, String newValue)
@@ -712,7 +806,8 @@ public class TableLayoutElement extends BaseElement
      *
      * @param columnLabel the label of the column
      * @param rowNumber the number of the row to update (the first line is number 1)
-     * @param fieldName the name of the field to edit, in other word the name of the corresponding XClass property
+     * @param fieldName the name of the field to edit, in other words, the name of the corresponding document or XClass
+     * property
      * @param newValue the new value set of the field, but never saved because we cancel the edition
      * @since 13.5RC1
      * @since 13.4.1
@@ -732,8 +827,25 @@ public class TableLayoutElement extends BaseElement
      */
     public WebElement findElementInRow(int rowNumber, By by)
     {
-        return getRoot().findElement(By.cssSelector(String.format("tbody tr:nth-child(%d)", rowNumber)))
-            .findElement(by);
+        return getRowElement(rowNumber).findElement(by);
+    }
+
+    /**
+     * Return a list of elements matching a given selector in a row.
+     *
+     * @param rowNumber the number of the row to search on (starting at index 1)
+     * @param by the selector of the elements to search for
+     * @return the list of matched elements
+     * @since 16.2.0RC1
+     */
+    public List<WebElement> findElementsInRow(int rowNumber, By by)
+    {
+        return getRowElement(rowNumber).findElements(by);
+    }
+
+    private WebElement getRowElement(int rowNumber)
+    {
+        return getRoot().findElement(By.cssSelector(String.format("tbody tr:nth-child(%d)", rowNumber)));
     }
 
     /**
@@ -799,7 +911,7 @@ public class TableLayoutElement extends BaseElement
      */
     public WebElement getDropDownButton()
     {
-        return getRoot().findElement(By.cssSelector("a.dropdown-toggle"));
+        return getRoot().findElement(By.cssSelector("button.dropdown-toggle"));
     }
 
     /**
@@ -859,7 +971,7 @@ public class TableLayoutElement extends BaseElement
         return getRoot().findElements(By.cssSelector(".column-name .property-name"))
             .stream()
             .map(WebElement::getText)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private WebElement getRoot()
@@ -872,7 +984,7 @@ public class TableLayoutElement extends BaseElement
         List<WebElement> elements = getRoot().findElements(By.cssSelector("thead tr th .property-name"));
         int index = -1;
         for (int i = 0; i < elements.size(); i++) {
-            if (elements.get(i).getText().equals(columnLabel)) {
+            if (columnLabel.equals(elements.get(i).getText())) {
                 index = i + 1;
                 break;
             }
@@ -891,7 +1003,8 @@ public class TableLayoutElement extends BaseElement
      *
      * @param columnLabel the label of the column
      * @param rowNumber the number of the row to update (the first line is number 1)
-     * @param fieldName the name of the field to edit, in other word the name of the corresponding XClass property
+     * @param fieldName the name of the field to edit, in other words, the name of the corresponding XClass or document
+     * property
      * @param newValue the new value set of the field, but never saved because we cancel the edition
      * @param save if the edit shall be saved (if false, the edit is cancelled)
      */
@@ -907,41 +1020,50 @@ public class TableLayoutElement extends BaseElement
             .moveToElement(element, 50, 0)
             .moveToElement(element, 0, 0)
             .perform();
-        By editActionSelector = By.cssSelector(".displayer-action-list span[title='Edit']");
-        // Waits to have at least one popover visible and click on the edit action of the last one. While it does not
-        // seem to be possible in normal conditions, using selenium and moveToElement, several popover can be visible
-        // at the same time (especially on Chrome). We select the latest edit action, which is the one of the targeted
-        // property because the popover actions are appended at the end of the document.
-        getDriver().waitUntilCondition(input -> !getDriver().findElementsWithoutWaiting(editActionSelector).isEmpty());
-        // Does not use findElementsWithoutWaiting to let a chance for the cursor to move to the targeted cell, and for
-        // its edit action popover to be displayed.
-        List<WebElement> popoverActions = getDriver().findElements(editActionSelector);
-        popoverActions.get(popoverActions.size() - 1).click();
-        
+
+        element.findElement(By.cssSelector(".displayer-action-list span[title='Edit']")).click();
+
         // Selector of the edited field.
-        By selector = By.cssSelector(String.format("[name$='_%s']", fieldName));
+        By selector;
+        // Document properties don't have a name attribute on their input, so we need to handle them differently.
+        // When we should have different editable properties in XWiki standard, we should generalize this to also
+        // support other types of properties that don't start with "doc.".
+        if (fieldName.startsWith("doc.")) {
+            // At the moment, all included displayers in LiveData except for XObject properties use an input without a
+            // name attribute.
+            selector = By.cssSelector("input");
+        } else {
+            selector = By.cssSelector(String.format("[name$='_%s']", fieldName));
+        }
 
         // Waits for the text input to be displayed.
         getDriver().waitUntilElementIsVisible(element, selector);
 
-        // Reuse the FormContainerElement to avoid code duplication of the interaction with the form elements 
+        // Reuse the FormContainerElement to avoid code duplication of the interaction with the form elements
         // displayed in the live data (they are the same as the one of the inline edit mode).
         new FormContainerElement(By.cssSelector(".livedata-displayer .edit"))
             .setFieldValue(element.findElement(selector), newValue);
 
         if (save) {
             // Clicks somewhere outside the edited cell. We use the h1 tag because it is present on all pages.
-            new Actions(getDriver().getWrappedDriver()).click(getDriver().findElement(By.tagName("h1"))).perform();
+            // Click close to the left border of the h1 to avoid clicking on a potential date picker that is
+            // hopefully not that close to the left.
+            WebElement h1 = getDriver().findElement(By.tagName("h1"));
+            int width = h1.getRect().getWidth();
+            // Calculate the offset from the center to be close to the left border of the h1.
+            int xOffset = -(width / 2 - 2);
+            new Actions(getDriver().getWrappedDriver()).moveToElement(h1, xOffset, 0).click().perform();
         } else {
             // Press escape to cancel the edition.
             new Actions(getDriver().getWrappedDriver()).sendKeys(Keys.ESCAPE).build().perform();
         }
 
-        // Waits for the field to disappear.
-        getDriver().waitUntilCondition(input -> {
-            // The edited field is not displayed anymore.
-            return element.findElements(selector).isEmpty();
-        });
+        // Wait for...
+        getDriver().waitUntilCondition(ExpectedConditions.or(
+            // ...either the cell to become stale (which can happen if the new value doesn't match the current filters)
+            ExpectedConditions.stalenessOf(element),
+            // ...or the edit field to disappear.
+            ExpectedConditions.not(ExpectedConditions.presenceOfNestedElementLocatedBy(element, selector))));
 
         // Wait for reload after saving.
         if (save) {
@@ -951,7 +1073,7 @@ public class TableLayoutElement extends BaseElement
 
     private String[] getClasses(WebElement element)
     {
-        return element.getAttribute(CLASS_HTML_ATTRIBUTE).split("\\s+");
+        return StringUtils.defaultString(element.getAttribute(ATTRIBUTE_CLASS)).split("\\s+");
     }
 
     private String urlWithoutFormToken(EntityReference entityReference, String action)
@@ -971,7 +1093,7 @@ public class TableLayoutElement extends BaseElement
         URIBuilder uriBuilder = new URIBuilder(initialUri);
         List<NameValuePair> cleanedUpParams = uriBuilder.getQueryParams().stream()
             .filter(it -> !Objects.equals(it.getName(), "form_token"))
-            .collect(Collectors.toList());
+            .toList();
         uriBuilder.setParameters(cleanedUpParams);
         URI uri;
         try {
@@ -980,5 +1102,10 @@ public class TableLayoutElement extends BaseElement
             uri = initialUri;
         }
         return uri.toASCIIString();
+    }
+
+    private static By getActionSelector(String actionName)
+    {
+        return By.cssSelector(String.format(".actions-container .action.action_%s", actionName));
     }
 }
