@@ -19,46 +19,38 @@
  */
 package org.xwiki.refactoring.internal.job;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.RegisterExtension;
 import org.xwiki.bridge.DocumentAccessBridge;
 import org.xwiki.bridge.event.DocumentsDeletingEvent;
-import org.xwiki.context.Execution;
-import org.xwiki.context.ExecutionContext;
-import org.xwiki.model.EntityType;
+import org.xwiki.job.Job;
 import org.xwiki.model.reference.DocumentReference;
 import org.xwiki.model.reference.EntityReference;
-import org.xwiki.model.reference.EntityReferenceProvider;
 import org.xwiki.model.reference.SpaceReference;
 import org.xwiki.model.reference.WikiReference;
 import org.xwiki.observation.ObservationManager;
 import org.xwiki.refactoring.RefactoringConfiguration;
 import org.xwiki.refactoring.batch.BatchOperation;
 import org.xwiki.refactoring.batch.BatchOperationExecutor;
-import org.xwiki.refactoring.internal.ModelBridge;
+import org.xwiki.refactoring.job.DeleteRequest;
 import org.xwiki.refactoring.job.EntityRequest;
 import org.xwiki.refactoring.job.question.EntitySelection;
-import org.xwiki.security.authorization.AuthorizationManager;
 import org.xwiki.security.authorization.Right;
-import org.xwiki.test.LogLevel;
-import org.xwiki.test.junit5.LogCaptureExtension;
 import org.xwiki.test.junit5.mockito.ComponentTest;
 import org.xwiki.test.junit5.mockito.InjectMockComponents;
 import org.xwiki.test.junit5.mockito.MockComponent;
 
 import ch.qos.logback.classic.Level;
 
-import static java.util.Collections.singletonList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.doAnswer;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -69,22 +61,13 @@ import static org.mockito.Mockito.when;
  * @version $Id$
  */
 @ComponentTest
-class DeleteJobTest
+class DeleteJobTest extends AbstractEntityJobTest
 {
-    @RegisterExtension
-    public LogCaptureExtension logCapture = new LogCaptureExtension(LogLevel.WARN);
-
     @InjectMockComponents
     private DeleteJob deleteJob;
 
     @MockComponent
-    private ModelBridge modelBridge;
-
-    @MockComponent
     private ObservationManager observationManager;
-
-    @MockComponent
-    private AuthorizationManager authorization;
 
     @MockComponent
     private RefactoringConfiguration configuration;
@@ -93,21 +76,12 @@ class DeleteJobTest
     private DocumentAccessBridge documentAccessBridge;
 
     @MockComponent
-    private EntityReferenceProvider defaultEntityReferenceProvider;
-
-    @MockComponent
-    private Execution jobExecution;
-
-    @MockComponent
     private BatchOperationExecutor batchOperationExecutor;
 
-    @BeforeEach
-    void beforeEach()
+    @Override
+    protected Job getJob()
     {
-        when(this.defaultEntityReferenceProvider.getDefaultReference(EntityType.DOCUMENT))
-            .thenReturn(new EntityReference("WebHome", EntityType.DOCUMENT));
-        ExecutionContext executionContext = mock(ExecutionContext.class);
-        when(this.jobExecution.getContext()).thenReturn(executionContext);
+        return this.deleteJob;
     }
 
     @Test
@@ -128,9 +102,36 @@ class DeleteJobTest
         run(request);
 
         verify(this.observationManager).notify(any(DocumentsDeletingEvent.class), any(DeleteJob.class),
-            eq(Collections.singletonMap(documentReference, new EntitySelection(documentReference))));
+            eq(Map.of(documentReference, new EntitySelection(documentReference))));
         verify(this.modelBridge).setContextUserReference(userReference);
-        verify(this.modelBridge).delete(documentReference);
+        verify(this.modelBridge).delete(documentReference, false);
+    }
+
+    @Test
+    void onDocumentDeletedWithAutomaticRedirect() throws Exception
+    {
+        DocumentReference documentReference = new DocumentReference("wiki", "Space", "Page");
+        when(this.modelBridge.exists(documentReference)).thenReturn(true);
+        DocumentReference redirectReference = new DocumentReference("wiki", "Space", "Redirect");
+
+        DocumentReference userReference = new DocumentReference("wiki", "Users", "Alice");
+        DocumentReference authorReference = new DocumentReference("wiki", "Users", "Bob");
+
+        DeleteRequest request = createRequest(documentReference);
+        request.setCheckRights(false);
+        request.setCheckAuthorRights(false);
+        request.setUserReference(userReference);
+        request.setAuthorReference(authorReference);
+        request.setAutoRedirect(true);
+        request.setNewBacklinkTargets(Collections.singletonMap(documentReference, redirectReference));
+
+        run(request);
+
+        verify(this.observationManager).notify(any(DocumentsDeletingEvent.class), any(DeleteJob.class),
+            eq(Map.of(documentReference, new EntitySelection(documentReference))));
+        verify(this.modelBridge).setContextUserReference(userReference);
+        verify(this.modelBridge).delete(documentReference, false);
+        verify(this.modelBridge).createRedirect(documentReference, redirectReference);
     }
 
     @Test
@@ -145,17 +146,17 @@ class DeleteJobTest
         DocumentReference userReference = new DocumentReference("wiki", "Users", "Alice");
         DocumentReference authorReference = new DocumentReference("wiki", "Users", "Bob");
 
-        EntityRequest request = createRequest(documentReference);
+        DeleteRequest request = createRequest(documentReference);
         request.setCheckRights(false);
         request.setCheckAuthorRights(false);
         request.setUserReference(userReference);
         request.setAuthorReference(authorReference);
-        request.setProperty(DeleteJob.SHOULD_SKIP_RECYCLE_BIN_PROPERTY, true);
+        request.setShouldSkipRecycleBin(true);
 
         run(request);
 
         verify(this.observationManager).notify(any(DocumentsDeletingEvent.class), any(DeleteJob.class),
-            eq(Collections.singletonMap(documentReference, new EntitySelection(documentReference))));
+            eq(Map.of(documentReference, new EntitySelection(documentReference))));
         verify(this.modelBridge).setContextUserReference(userReference);
         verify(this.modelBridge).delete(documentReference, true);
     }
@@ -167,10 +168,10 @@ class DeleteJobTest
 
         run(createRequest(documentReference));
 
-        assertEquals(1, this.logCapture.size());
-        assertEquals(Level.WARN, this.logCapture.getLogEvent(0).getLevel());
-        assertEquals("Skipping [wiki:Space.Page] because it doesn't exist.", this.logCapture.getMessage(0));
-        verify(this.modelBridge, never()).delete(any(DocumentReference.class));
+        assertEquals(1, getLogCapture().size());
+        assertEquals(Level.WARN, getLogCapture().getLogEvent(0).getLevel());
+        assertEquals("Skipping [wiki:Space.Page] because it doesn't exist.", getLogCapture().getMessage(0));
+        verify(this.modelBridge, never()).delete(any(DocumentReference.class), anyBoolean());
     }
 
     @Test
@@ -193,10 +194,10 @@ class DeleteJobTest
 
         run(request);
 
-        assertEquals(1, this.logCapture.size());
-        assertEquals(Level.ERROR, this.logCapture.getLogEvent(0).getLevel());
-        assertEquals("You are not allowed to delete [wiki:Space.Page].", this.logCapture.getMessage(0));
-        verify(this.modelBridge, never()).delete(any(DocumentReference.class));
+        assertEquals(1, getLogCapture().size());
+        assertEquals(Level.ERROR, getLogCapture().getLogEvent(0).getLevel());
+        assertEquals("You are not allowed to delete [wiki:Space.Page].", getLogCapture().getMessage(0));
+        verify(this.modelBridge, never()).delete(any(DocumentReference.class), anyBoolean());
     }
 
     @Test
@@ -219,9 +220,9 @@ class DeleteJobTest
 
         run(request);
 
-        assertEquals(1, this.logCapture.size());
-        assertEquals(Level.ERROR, this.logCapture.getLogEvent(0).getLevel());
-        assertEquals("You are not allowed to delete [wiki:Space.Page].", this.logCapture.getMessage(0));
+        assertEquals(1, getLogCapture().size());
+        assertEquals(Level.ERROR, getLogCapture().getLogEvent(0).getLevel());
+        assertEquals("You are not allowed to delete [wiki:Space.Page].", getLogCapture().getMessage(0));
         verify(this.modelBridge, never()).delete(any(DocumentReference.class));
     }
 
@@ -245,16 +246,16 @@ class DeleteJobTest
         DocumentReference aliceReference = new DocumentReference("wiki", "Space", "Alice");
         DocumentReference bobReference = new DocumentReference("wiki", "Space", "Bob");
         when(this.modelBridge.getDocumentReferences(spaceReference)).thenReturn(
-            Arrays.asList(aliceReference, bobReference));
+            List.of(aliceReference, bobReference));
 
         run(createRequest(spaceReference));
 
         // We only verify that the code tries to delete the documents.
-        assertEquals(2, this.logCapture.size());
-        assertEquals(Level.WARN, this.logCapture.getLogEvent(0).getLevel());
-        assertEquals(Level.WARN, this.logCapture.getLogEvent(1).getLevel());
-        assertEquals("Skipping [wiki:Space.Alice] because it doesn't exist.", this.logCapture.getMessage(0));
-        assertEquals("Skipping [wiki:Space.Bob] because it doesn't exist.", this.logCapture.getMessage(1));
+        assertEquals(2, getLogCapture().size());
+        assertEquals(Level.WARN, getLogCapture().getLogEvent(0).getLevel());
+        assertEquals(Level.WARN, getLogCapture().getLogEvent(1).getLevel());
+        assertEquals("Skipping [wiki:Space.Alice] because it doesn't exist.", getLogCapture().getMessage(0));
+        assertEquals("Skipping [wiki:Space.Bob] because it doesn't exist.", getLogCapture().getMessage(1));
     }
 
     @Test
@@ -264,11 +265,11 @@ class DeleteJobTest
 
         run(createRequest(foo));
 
-        assertEquals(2, this.logCapture.size());
-        assertEquals(Level.ERROR, this.logCapture.getLogEvent(0).getLevel());
-        assertEquals(Level.ERROR, this.logCapture.getLogEvent(1).getLevel());
-        assertEquals("Unsupported entity type [WIKI].", this.logCapture.getMessage(0));
-        assertEquals("Unsupported entity type [WIKI].", this.logCapture.getMessage(1));
+        assertEquals(2, getLogCapture().size());
+        assertEquals(Level.ERROR, getLogCapture().getLogEvent(0).getLevel());
+        assertEquals(Level.ERROR, getLogCapture().getLogEvent(1).getLevel());
+        assertEquals("Unsupported entity type [WIKI].", getLogCapture().getMessage(0));
+        assertEquals("Unsupported entity type [WIKI].", getLogCapture().getMessage(1));
         verify(this.modelBridge, never()).delete(any(DocumentReference.class));
     }
 
@@ -283,14 +284,14 @@ class DeleteJobTest
         }
     }
 
-    private EntityRequest createRequest(EntityReference entityReference)
+    private DeleteRequest createRequest(EntityReference entityReference)
     {
         doAnswer(it -> {
             this.deleteJob.process(entityReference);
             return null;
         }).when(this.batchOperationExecutor).execute(any(BatchOperation.class));
-        EntityRequest request = new EntityRequest();
-        request.setEntityReferences(singletonList(entityReference));
+        DeleteRequest request = new DeleteRequest();
+        request.setEntityReferences(List.of(entityReference));
         return request;
     }
 }
